<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView
		android:id="@+id/takeTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="10pt" />
	<LinearLayout
	android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    	<TextView
    		android:id="@+id/specificTitle"
    		android:text="@string/specificTitleText"
    		android:textSize="6pt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="top"/>
		<EditText
			android:id="@+id/specificAddress"
			android:text="@string/specificAddressText"
			android:textSize="6pt" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content"/>
		<Button
			android:id="@+id/specificAddAddressButton"
			android:text="@string/specificAddressButtonText"
			android:layout_width="wrap_content" android:layout_height="match_parent"/>
		<Button
			android:id="@+id/specificButton"
			android:text="@string/specificButtonText"
			android:layout_width="wrap_content" android:layout_height="match_parent"/>
    </LinearLayout>
   
	<com.aroundroidgroup.map.AdjustedMap
		android:id="@+id/mapview" 
		android:layout_width="fill_parent"
		android:layout_height="match_parent" 
		android:clickable="true"
		android:apiKey="0gPZMWs1hQJHQuOt19AjiK-fu5ojqllaCkpLusA" />

</LinearLayout>