<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation = "vertical"
    >
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFriendManually"/>
        
   	<EditText
	        android:id="@+id/editTextFriendMail"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scrollbars="vertical"
	        android:gravity="top"
	        android:autoText="true"
	        android:capitalize="sentences"
	        android:singleLine="false" />
	        
	<Button 
        	android:id="@+id/submitContactButton"
        	android:layout_width="fill_parent" 
      		android:layout_height="wrap_content"
   		    android:layout_weight="1"
        	android:scaleType="fitCenter"
        	android:text="@string/OK"
        	/>
        
   	<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanForFriends"/>

	<ListView android:id="@id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
 <!-- 
  	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noContacs"/>
 -->
        
</LinearLayout>